--- a/package.xml
+++ b/package.xml
@@ -42,7 +42,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- <buildtool_depend>catkin</buildtool_depend> -->
   <buildtool_depend>ament</buildtool_depend> <!-- catkin now its ament -->
-  <!-- <build_depend>orocos_kdl</build_depend> -->
+   <build_depend>orocos_kdl</build_depend> 
 
   <!-- <build_depend>roscpp</build_depend> -->
   <build_depend>rclcpp</build_depend> <!-- ROS Client Library for C++ (rclcpp), instead of roscpp -->
@@ -51,7 +51,7 @@
   <!-- <build_depend>std_msgs</build_depend> -->
   <build_depend>common_interfaces</build_depend>
   <!-- <run_depend>orocos_kdl</run_depend> -->
-
+  <exec_depend>orocos_kdl</exec_depend>
   <!-- <run_depend>roscpp</run_depend> -->
   <exec_depend>rclcpp</exec_depend>
   <!-- <run_depend>rospy</run_depend> not necessary-->
